@@ -3013,9 +3013,9 @@ bool UnityWindow::glPaint(const GLWindowPaintAttrib& attrib,
       wAttrib.opacity = 0.0;
       int old_index = gWindow->glPaintGetCurrentIndex();
       gWindow->glPaintSetCurrentIndex(MAXSHORT);
+      deco_win_->Paint(matrix, wAttrib, region, mask);
       bool ret = gWindow->glPaint(wAttrib, matrix, region, mask);
       gWindow->glPaintSetCurrentIndex(old_index);
-      deco_win_->Paint(matrix, wAttrib, region, mask);
       return ret;
     }
   }
